# transcribeit

./: README.md
.github/workflows/: linters.yaml
backend/: pyproject.toml
backend/src/transcribeit/: server.py
backend/src/transcribeit/config/: __init__.py  environment.py
backend/src/transcribeit/constants/: download.py
backend/src/transcribeit/models/: transcription.py
backend/src/transcribeit/routers/: transcription.py
backend/src/transcribeit/routers/api/: v1.py
backend/src/transcribeit/services/: transcription.py
backend/src/transcribeit/services/download/: youtube.py
frontend/: Dockerfile  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/app/: Transcription.tsx
frontend/src/components/app/commons/: Header.tsx
frontend/src/lib/: schema.ts  types.ts  utils.ts
